 - [ZBXNEXT-592] confirmation dialog for scripts (Vedmak)
 - [ZBX-3355] added character field length validation on inserts and updates (KB)
 - [ZBX-3370] updated Russian translation; thanks to zalex_ua and dotneft (Richlv)
 - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)

Bug fixes:
 - [ZBX-976] fix and improve availability report dropdown captions (Richlv)
 - [ZBX-3472] In item and discovery forms snmpv3 auth fields are now hidden if not needed (KB)
 - [ZBX-3550] enforce authentication for API, if auth param is not empty (Vedmak)
 - [ZBX-3500] added "change" link to "clock" element in screen configuration (KB)
 - [ZBX-3500] fixed infinite loop when screen was added as an element of another screen (KB)
 - [ZBX-3500] fixed database query algorithm when saving maintenance (KB)
 - [ZBX-3497] fixed Undefined index after changing Type of information in items (Vlad)
 - [ZBX-3477] fixed deletion of discovery rules without item prototypes (Vedmak)
 - [ZBX-3328] data exported from 1.8.x now can be successfully imported into 2.0 (KB)
 - [ZBX-3470] table user_groups is now updated only if necessary when user details are saved (KB)
 - [ZBX-1819] fixed templates listed twice for graphs if host filter is set to all (Vedmak)
 - [ZBX-3442] fixed GUI config "first selected" and "event ack" dropdowns (Vedmak)
 - [ZBX-3329] fixed shown last value as "0" in frontend for items that have never been updated (Aly)
 - [ZBX-3436] added missing "Primary POC Screen Name" to Inventory->Hosts (KB)
 - [ZBX-3405] fixed value_type for response code and failed step items when creating webcheck (Vedmak)
 - [ZBX-3363] fixed possible crash of server while processing of {HOST.CONN}, {IPADDRESS} and {HOST.DNS} macros (Sasha)
 - [ZBX-3326] add X-Poedit-Basepath header to all locales (Richlv)
 - [ZBX-3369] fixed API returning true in more Classes methods *.update and *.delete (Vlad)
 - [ZBX-3368] fixed custom graphs in screens form prefixed with ':' (Vedmak)