@@ -21,6 +21,7 @@ New features:
  - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 
 Bug fixes:
+ - [ZBX-3538] action condition 'Trigger description' renamed to 'Trigger name' (Alexei)
  - [ZBX-976] fix and improve availability report dropdown captions (Richlv)
  - [ZBX-3472] In item and discovery forms snmpv3 auth fields are now hidden if not needed (KB)
  - [ZBX-3550] enforce authentication for API, if auth param is not empty (Vedmak)
